--- a/tmux.conf
+++ b/tmux.conf
@@ -52,5 +52,5 @@ set -g lock-command "cmatrix -saBu 1"
 
 # status bar conf
 set -g status-style 'fg=colour121,bg=colour234'
-set -g status-right '#[fg=colour121,bg=colour234] %D %R | 🌡 #(/bin/bash ~/Config/temperature.sh)  ♥  #(/bin/bash ~/Config/battery.sh) '
+set -g status-right '#[fg=colour121,bg=colour234] %D %R | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
 set -g status-left '#[fg=colour121,bg=colour234] #(whoami) | '
