Unbound arrow keys in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,10 @@ unbind \;	# default: move to prev active pane
 # unbind &	# default: kill current window
 unbind l	# default: move to prev selected window (not rebound)
 unbind :	# default: enter the tmux command prompt
+unbind Up		# default: select the pane above
+unbind Down		# default: select the pane below
+unbind Left		# default: select the pane to the left
+unbind Right	# default: select the pane to the right
 
 bind -T prefix / splitw -h		# split horizontally (l & r)
 bind -T prefix % selectp -l		# select last window
