--- a/tmux.conf
+++ b/tmux.conf
@@ -4,8 +4,9 @@
 #	horizontal split is now set to '/'
 #	window selection uses vim keys (hjkl)
 #	command prompt is ';'
-#	
-#
+#	Unbound arrow keys
+#	C-v prefix does conflict with vim's block edit mode,
+#	  but pressing C-v twice works
 ##################################
 
 # unset ctrl-b and set to crtl-c
@@ -48,7 +49,7 @@ bind -r -T prefix l selectp -R
 ### appearance ###
 
 # give colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # set timeout 5 mins
 set -g lock-after-time 300
