Fixed ability to redo

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,9 @@ set -g default-shell "/bin/bash"
 # make delay timer shorter 
 set -sg escape-time 0
 
+# increase history limits
+set -g history-limit 99999
+
 ### key-bindings ###
 
 # reload config file
