Overhauled tmux.conf (see overview)

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,22 @@
 ##################################
 # Overview:
-#	C-b is now set to C-v (C-b is unbound)
-#	horizontal split is now set to '/'
-#	window selection uses vim keys (hjkl)
-#	command prompt is ';'
-#	Unbound arrow keys
-#	C-v prefix does conflict with vim's block edit mode,
-#	  but pressing C-v twice works
+#   C-b is now set to C-v (C-b is unbound)
+#   horizontal split is now set to '/'
+#   window selection uses vim keys (hjkl)
+#   command prompt is ';'
+#   Unbound arrow keys
+#   C-v prefix does conflict with vim's block edit mode,
+#     but pressing C-v twice works
+#   Status key mode is vi (line 2392 in man page)
+#   mode keys are the same (line 690)
+# In copy mode:
+#   `v' starts the selection
+#   `y' copies (yanks) the selection
+#   `q' and Escape are swapped
+#       (q clears selection, Esc exits copy mode)
 ##################################
+
+### general ###
 
 # unset ctrl-b and set to crtl-c
 unbind C-b
@@ -16,32 +25,41 @@ bind C-v send-prefix
 
 set -g default-shell "/bin/bash"
 
-# make delay timer shorter 
+# vim for life babeyyy
+set -g status-keys vi
+set -g mode-keys vi
+
+# make delay timer shorter
 set -sg escape-time 0
 
 # increase history limits
 set -g history-limit 99999
+
+set -g renumber-windows on
+
+set -g word-separators " -_@()[]#"
 
 ### key-bindings ###
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
 
-unbind %	# default: split to l & r windows
-unbind \;	# default: move to prev active pane
-# unbind &	# default: kill current window
-unbind l	# default: move to prev selected window (not rebound)
-unbind :	# default: enter the tmux command prompt
-unbind Up		# default: select the pane above
-unbind Down		# default: select the pane below
-unbind Left		# default: select the pane to the left
-unbind Right	# default: select the pane to the right
+unbind %        # default: split to l & r windows
+unbind \;       # default: move to prev active pane
+# unbind &      # default: kill current window
+unbind l        # default: move to prev selected window (not rebound)
+unbind :        # default: enter the tmux command prompt
+unbind Up       # default: select the pane above
+unbind Down     # default: select the pane below
+unbind Left     # default: select the pane to the left
+unbind Right    # default: select the pane to the right
 
-bind -T prefix / splitw -h		# split horizontally (l & r)
-bind -T prefix % selectp -l		# select last window
+bind -T prefix / splitw -h      # split horizontally (l & r)
+bind -T prefix % selectp -l     # select last window
 bind -T prefix \; command-prompt
-# bind -T prefix 7 killw			# kill the window
-# TODO: ` 
+# todo: bind grave (`)
+
+set -g base-index 1
 
 # vim style window selection
 bind -r -T prefix h selectp -L
@@ -49,7 +67,17 @@ bind -r -T prefix j selectp -D
 bind -r -T prefix k selectp -U
 bind -r -T prefix l selectp -R
 
+## copy mode
+
+bind -r -T copy-mode-vi v send-keys -X begin-selection
+bind -r -T copy-mode-vi y send-keys -X copy-selection
+bind -r -T copy-mode-vi q send-keys -X clear-selection
+bind -r -T copy-mode-vi Escape send-keys -X cancel
+
 ### appearance ###
+
+# autoname windows
+set -g set-titles on
 
 # give colors
 set -g default-terminal "tmux-256color"
@@ -58,7 +86,11 @@ set -g default-terminal "tmux-256color"
 set -g lock-after-time 300
 set -g lock-command "cmatrix -saBu 1"
 
+# sets time messages display to 1.5 seconds
+set -g display-time 1500
+
 # status bar conf
+set -g status-left-length 40
 set -g status-style 'fg=colour121,bg=colour234'
 set -g status-right '#[fg=colour121,bg=colour234] %D %R | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
-set -g status-left '#[fg=colour121,bg=colour234] #(whoami) | '
+set -g status-left '#[fg=colour121,bg=colour234] #(whoami) #h | '
