Update tmux.conf and vimrc

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-##################################
+#################### head: 15 ###
 # Overview:
 #   C-b is now set to C-v (C-b is unbound)
 #   horizontal split is now set to '/'
@@ -55,7 +55,7 @@ unbind Right    # default: select the pane to the right
 bind -T prefix / splitw -h      # split horizontally (l & r)
 bind -T prefix % selectp -l     # select last window
 bind -T prefix \; command-prompt
-# todo: bind grave (`)
+bind -T prefix ? list-keys # the default is list-keys -N which i don't prefer
 
 set -g base-index 1
 
@@ -69,6 +69,10 @@ bind -r -T prefix l selectp -R
 
 bind -r -T copy-mode-vi v send-keys -X begin-selection
 bind -r -T copy-mode-vi y send-keys -X copy-selection
+bind -r -T copy-mode-vi C-q send-keys -X rectangle-toggle
+
+# toggle status bar
+bind ` set-option -g status
 
 ### appearance ###
 
@@ -84,6 +88,10 @@ set -g lock-command "cmatrix -saBu 1"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
+
+# clock mode
+set -g clock-mode-colour colour121
+#set -g clock-mode-style 12
 
 # status bar conf
 set -g status-left-length 40
