Updated vimrc and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,7 +35,7 @@ set -g history-limit 99999
 
 set -g renumber-windows on
 
-set -g word-separators " -_@()[]#"
+set -g word-separators " -_@()[]#:"
 
 ### key-bindings ###
 
@@ -90,7 +90,7 @@ set -g lock-command "cmatrix -saBu 1"
 set -g display-time 1500
 
 # clock mode
-set -g clock-mode-colour colour121
+set -g clock-mode-colour colour120
 #set -g clock-mode-style 12
 
 # status bar conf
