Updated vimrc and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -96,5 +96,5 @@ set -g clock-mode-colour colour120
 # status bar conf
 set -g status-left-length 40
 set -g status-style 'fg=colour121,bg=colour234'
-set -g status-right '#[fg=colour121,bg=colour234] %D %R | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
+set -g status-right '#[fg=colour121,bg=colour234] %D #(hostname -I | cut -d " " -f 1) | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
 set -g status-left '#[fg=colour121,bg=colour234] #(whoami) #h | '
