Updated vimrc and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -58,6 +58,7 @@ bind -T prefix \; command-prompt
 bind -T prefix ? list-keys # the default is list-keys -N which i don't prefer
 
 set -g base-index 1
+set -g pane-base-index 1
 
 # vim style window selection
 bind -r -T prefix h selectp -L
@@ -79,9 +80,6 @@ bind ` set-option -g status
 # autoname windows
 set -g set-titles on
 
-# give colors
-set -g default-terminal "tmux-256color"
-
 # set timeout 5 mins
 set -g lock-after-time 300
 set -g lock-command "cmatrix -saBu 1"
@@ -89,13 +87,33 @@ set -g lock-command "cmatrix -saBu 1"
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
 
-# clock mode
-set -g clock-mode-colour colour120
-#set -g clock-mode-style 12
+## colors ##
+
+fav_fg=colour121
+fav_bg=colour234
+
+# give colors
+set -g default-terminal "tmux-256color"
 
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 50
-set -g status-style 'fg=colour121,bg=colour234'
-set -g status-right '#[fg=colour121,bg=colour234] %D #(hostname -I | cut -d " " -f 1) | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
-set -g status-left '#[fg=colour121,bg=colour234] #(whoami) #h | '
+set -g status-fg $fav_fg
+set -g status-bg $fav_bg
+set -g status-right '%D #(hostname -I | cut -d " " -f 1) | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
+set -g status-left '#(whoami) #h | '
+
+# clock mode
+set -g clock-mode-colour $fav_fg
+#set -g clock-mode-style 12
+
+# pane border
+set -g pane-border-style fg=colour240
+set -g pane-active-border-style fg=$fav_fg
+
+# message text
+# colors are deliberately backwards here
+set -g message-style fg=$fav_bg,bg=$fav_fg
+
+# mode style (colors in copy mode, etc.)
+set-window-option -g mode-style fg=$fav_bg,bg=$fav_fg
