--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ set -g status-right-length 50
 set -g status-fg $fav_fg
 set -g status-bg $fav_bg
 set -g status-right '%D #(hostname -I | cut -d " " -f 1) | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
-set -g status-left '#(whoami) #h | '
+set -g status-left '#(whoami) #h #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
 # clock mode
 set -g clock-mode-colour $fav_fg
