--- a/tmux.conf
+++ b/tmux.conf
@@ -100,7 +100,7 @@ set -g status-left-length 40
 set -g status-right-length 50
 set -g status-fg $fav_fg
 set -g status-bg $fav_bg
-set -g status-right '%D #(hostname -I | cut -d " " -f 1) | 🌡 #(/bin/bash ~/Config/temperature.sh)°F  ♥  #(/bin/bash ~/Config/battery.sh) '
+set -g status-right ' | #(/bin/echo -en "\xf0\x9f\x97\x93") %D #(/bin/echo -en "\xf0\x9f\x92\xbb") #(hostname -I | cut -d " " -f 1) #(/bin/bash ~/Config/temperature.sh)#(/bin/bash ~/Config/battery.sh)'
 set -g status-left '#(whoami) #h #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
 # clock mode
