--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ unbind C-b
 set -g prefix C-v
 bind C-v send-prefix
 
-set -g default-shell "/bin/bash"
+set -g default-shell "$SHELL"
 
 # vim for life babeyyy
 set -g status-keys vi
@@ -100,7 +100,9 @@ set -g status-left-length 40
 set -g status-right-length 50
 set -g status-fg $fav_fg
 set -g status-bg $fav_bg
-set -g status-right ' | #(/bin/echo -en "\xf0\x9f\x97\x93") %D #(/bin/echo -en "\xf0\x9f\x92\xbb") #(hostname -I | cut -d " " -f 1) #(/bin/bash ~/Config/temperature.sh)#(/bin/bash ~/Config/battery.sh)'
+# first set of hex characters: calendar emoji
+# second set of hex characters: computer emoji
+set -g status-right ' | #(/bin/echo -en "\xf0\x9f\x97\x93") %D #(/bin/echo -en "\xf0\x9f\x92\xbb") #((hostname -I || hostname -i) | cut -d " " -f 1) #(/bin/bash ~/Config/temperature.sh)#(/bin/bash ~/Config/battery.sh)'
 set -g status-left '#(whoami) #h #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
 # clock mode
