Fixed ability to use anywhere

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,7 +102,7 @@ set -g status-fg $fav_fg
 set -g status-bg $fav_bg
 # first set of hex characters: calendar emoji
 # second set of hex characters: computer emoji
-set -g status-right ' | #(/bin/echo -en "\xf0\x9f\x97\x93") %D #(/bin/echo -en "\xf0\x9f\x92\xbb") #((hostname -I || hostname -i) | cut -d " " -f 1) #(/bin/bash ~/Config/temperature.sh)#(/bin/bash ~/Config/battery.sh)'
+set -g status-right ' | #(/bin/echo -en "\xf0\x9f\x97\x93") %D #(/bin/echo -en "\xf0\x9f\x92\xbb") #((hostname -I || hostname -i) | cut -d " " -f 1) #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
 set -g status-left '#(whoami) #h #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
 # clock mode
