Added time to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,13 +82,14 @@ set -g set-titles on
 
 # set timeout 5 mins
 set -g lock-after-time 300
-set -g lock-command "cmatrix -saBu 1"
+set -g lock-command "cmatrix -saBu 2 -C green"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
 
 ## colors ##
 
+# colour121
 fav_fg=colour121
 fav_bg=colour234
 
@@ -97,13 +98,20 @@ set -g default-terminal "tmux-256color"
 
 # status bar conf
 set -g status-left-length 40
-set -g status-right-length 50
+set -g status-right-length 60
 set -g status-fg $fav_fg
 set -g status-bg $fav_bg
-# first set of hex characters: calendar emoji
-# second set of hex characters: computer emoji
-set -g status-right ' | #(/bin/echo -en "\xf0\x9f\x97\x93") %D #(/bin/echo -en "\xf0\x9f\x92\xbb") #((hostname -I || hostname -i) | cut -d " " -f 1) #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
-set -g status-left '#(whoami) #h #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
+calendar_emoji="\\xf0\\x9f\\x97\\x93"
+computer_emoji="\\xf0\\x9f\\x92\\xbb"
+clock_emoji="\\xe2\\x8c\\x9a"
+set -g status-right ' | \
+#(/bin/echo -en "$clock_emoji") #(date +%I:%M\ %P) \
+#(/bin/echo -en "$calendar_emoji") %D \
+#(/bin/echo -en "$computer_emoji") \
+#((hostname -I || hostname -i) | cut -d " " -f 1) \
+#(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
+set -g status-left '#(whoami) #h \
+#{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
 # clock mode
 set -g clock-mode-colour $fav_fg
