--- a/tmux.conf
+++ b/tmux.conf
@@ -108,7 +108,7 @@ set -g status-right ' | \
 #(/bin/echo -en "$clock_emoji") #(date +%I:%M\ %P) \
 #(/bin/echo -en "$calendar_emoji") %D \
 #(/bin/echo -en "$computer_emoji") \
-#((hostname -I || hostname -i) | cut -d " " -f 1) \
+#((test ! -z $(hostname -I) && hostname -I || hostname -i) | cut -d " " -f 1) \
 #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
 set -g status-left '#(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
