--- a/tmux.conf
+++ b/tmux.conf
@@ -82,7 +82,10 @@ set -g set-titles on
 
 # set timeout 5 mins
 set -g lock-after-time 300
-set -g lock-command "cmatrix -saBu 2 -C green"
+# including pkill ueberzug here as even when locked, the image is still shown
+# this means you'd have to scroll back over the image once unlocked but that's
+# not really a biggie
+set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C green"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
