--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,4 @@
-#################### head: 15 ###
-# Overview:
-#   C-b is now set to C-v (C-b is unbound)
-#   horizontal split is now set to '/'
-#   window selection uses vim keys (hjkl)
-#   command prompt is ';'
-#   Unbound arrow keys
-#   C-v prefix does conflict with vim's block edit mode,
-#     but pressing C-v twice works
-#   Status key mode is vi (line 2392 in man page)
-#   mode keys are the same (line 690)
-# In copy mode:
-#   `v' starts the selection
-#   `y' copies (yanks) the selection
-##################################
+# tmux.conf
 
 ### general ###
 
@@ -85,15 +71,17 @@ set -g lock-after-time 300
 # including pkill ueberzug here as even when locked, the image is still shown
 # this means you'd have to scroll back over the image once unlocked but that's
 # not really a biggie
-set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C green"
+set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C blue"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
 
 ## colors ##
 
-# colour121
-fav_fg=colour121
+# defaults:
+# fg = colour121
+# bg = colour234
+fav_fg=colour69
 fav_bg=colour234
 
 # give colors
@@ -111,7 +99,8 @@ set -g status-right ' | \
 #(/bin/echo -en "$clock_emoji") #(date +%I:%M\ %P) \
 #(/bin/echo -en "$calendar_emoji") %D \
 #(/bin/echo -en "$computer_emoji") \
-#((test ! -z "$(hostname -I)" && hostname -I || hostname -i) | cut -d " " -f 1) \
+#(ip a | tac | sed "s/ * / /g" | grep -v "tun[0-9]" | grep "inet " | \
+        cut -d " " -f3 | cut -d/ -f1 | head -n 1) \
 #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
 set -g status-left '#(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
