Updated tmux.conf and aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -99,9 +99,9 @@ set -g status-right ' | \
 #(/bin/echo -en "$clock_emoji") #(date +%I:%M\ %P) \
 #(/bin/echo -en "$calendar_emoji") %D \
 #(/bin/echo -en "$computer_emoji") \
-#(ip a | tac | sed "s/ * / /g" | grep "inet " | \
+#(ip a | sed "s/ * / /g" | grep "inet " | \
         grep -v "tun[0-9]" | grep -v "br-" | grep -v "docker" | \
-        cut -d " " -f3 | cut -d/ -f1 | head -n 1) \
+        cut -d " " -f3 | cut -d/ -f1 | tail -n1) \
 #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
 set -g status-left '#(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
