Updated aliases and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -99,7 +99,7 @@ set -g status-right ' | \
 #(/bin/echo -en "$clock_emoji") #(date +%I:%M\ %P) \
 #(/bin/echo -en "$calendar_emoji") %D \
 #(/bin/echo -en "$computer_emoji") \
-#(ip a | sed "s/ * / /g" | grep "inet " | \
+#(ip -br -4 a | sed "s/ * / /g" | \
         grep -v "tun[0-9]" | grep -v "br-" | grep -v "docker" | \
         cut -d " " -f3 | cut -d/ -f1 | tail -n1) \
 #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
