--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,7 @@ set -g lock-after-time 300
 # including pkill ueberzug here as even when locked, the image is still shown
 # this means you'd have to scroll back over the image once unlocked but that's
 # not really a biggie
-set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C blue"
+set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C green"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
@@ -81,11 +81,12 @@ set -g display-time 1500
 # defaults:
 # fg = colour121
 # bg = colour234
-fav_fg=colour69
+fav_fg=colour121
 fav_bg=colour234
 
 # give colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal "$TERM"
+set -wa terminal-overrides ",linux:RGB"
 
 # status bar conf
 set -g status-left-length 40
@@ -103,7 +104,7 @@ set -g status-right ' | \
         grep -v "tun[0-9]" | grep -v "br-" | grep -v "docker" | \
         cut -d " " -f3 | cut -d/ -f1 | tail -n1) \
 #(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
-set -g status-left '#(whoami) #h \
+set -g status-left '[#S:#I:#P] #(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
 # clock mode
