--- a/tmux.conf
+++ b/tmux.conf
@@ -93,17 +93,13 @@ set -g status-left-length 40
 set -g status-right-length 60
 set -g status-fg $fav_fg
 set -g status-bg $fav_bg
-calendar_emoji="\\xf0\\x9f\\x97\\x93"
-computer_emoji="\\xf0\\x9f\\x92\\xbb"
-clock_emoji="\\xe2\\x8c\\x9a"
 set -g status-right ' | \
-#(/bin/echo -en "$clock_emoji") #(date +%I:%M\ %P) \
-#(/bin/echo -en "$calendar_emoji") %D \
-#(/bin/echo -en "$computer_emoji") \
+#(date +%I:%M\ %P) | %D | \
 #(ip -br -4 a | sed "s/ * / /g" | \
         grep -v "tun[0-9]" | grep -v "br-" | grep -v "docker" | \
-        cut -d " " -f3 | cut -d/ -f1 | tail -n1) \
-#(/bin/bash $SebCfgDir/temperature.sh)#(/bin/bash $SebCfgDir/battery.sh)'
+        cut -d " " -f3 | cut -d/ -f1 | tail -n1) | \
+#(/usr/bin/env sh $SebCfgDir/temperature.sh) | \
+#(/usr/bin/env sh $SebCfgDir/battery.sh)'
 set -g status-left '[#S:#I:#P] #(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
