--- a/tmux.conf
+++ b/tmux.conf
@@ -98,8 +98,8 @@ set -g status-right ' | \
 #(ip -br -4 a | sed "s/ * / /g" | \
         grep -v "tun[0-9]" | grep -v "br-" | grep -v "docker" | \
         cut -d " " -f3 | cut -d/ -f1 | tail -n1) | \
-#(/usr/bin/env sh $SebCfgDir/temperature.sh)\
-#(/usr/bin/env sh $SebCfgDir/battery.sh)'
+#(/usr/bin/env bash $SebCfgDir/temperature.sh)\
+#(/usr/bin/env bash $SebCfgDir/battery.sh)'
 set -g status-left '[#S:#I:#P] #(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
 
