--- a/tmux.conf
+++ b/tmux.conf
@@ -78,9 +78,11 @@ set -g display-time 1500
 ## colors ##
 
 # defaults:
-# fg = colour121
-# bg = colour234
+# fg = colour121 (#87ffaf)
+# comp = colour212 (closest to #ff8d86)
+# bg = colour234 (#1c1c1c)
 fav_fg=colour121
+fav_cm=colour212
 fav_bg=colour234
 
 # give colors
@@ -101,6 +103,13 @@ set -g status-right ' | \
 #(/usr/bin/env bash $SebCfgDir/battery.sh)'
 set -g status-left '[#S:#I:#P] #(whoami) #h \
 #{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
+
+# current window style (on the status line)
+set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,bold
+
+# pane number display
+set -g display-panes-active-colour $fav_fg
+set -g display-panes-colour $fav_cm
 
 # clock mode
 set -g clock-mode-colour $fav_fg
