--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,8 @@ bind -T prefix % selectp -l     # select last window
 bind -T prefix \; command-prompt
 bind -T prefix ? list-keys # the default is list-keys -N which i don't prefer
 
+bind -T prefix C-l lock
+
 set -g base-index 1
 set -g pane-base-index 1
 
