--- a/tmux.conf
+++ b/tmux.conf
@@ -74,7 +74,7 @@ set -g lock-after-time 180
 # not really a biggie
 #set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C green"
 # package tty-clock in debian-based distros; tty-clock-git in arch
-set -g lock-command "pkill ueberzug; tty-clock -ScbtB -C 2"
+set -g lock-command "pkill ueberzug; tty-clock -ScbtB -C 2 -d 0.5"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
