--- a/tmux.conf
+++ b/tmux.conf
@@ -72,9 +72,9 @@ set -g lock-after-time 180
 # including pkill ueberzug here as even when locked, the image is still shown
 # this means you'd have to scroll back over the image once unlocked but that's
 # not really a biggie
-#set -g lock-command "pkill ueberzug; cmatrix -saBu 2 -C green"
+set -g lock-command "pkill ueberzug; cmatrix -sBu 2 -C green"
 # package tty-clock in debian-based distros; tty-clock-git in arch
-set -g lock-command "pkill ueberzug; tty-clock -ScbtB -C 2 -d 0.5"
+#set -g lock-command "pkill ueberzug; tty-clock -ScbtB -C 2 -d 0.5"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
