--- a/elinks.conf
+++ b/elinks.conf
@@ -141,3 +141,44 @@ bind "main" "|" = "none"
     set terminal.tmux-256color.block_cursor = 1
 
 
+
+
+
+##############################
+# Automatically saved options
+#
+
+## ui 
+#  User interface options.
+
+  ## ui.dialogs 
+  #  Dialogs-specific appearance and behaviour settings.
+
+    ## ui.dialogs.shadows [0|1]
+    #  Make dialogs drop shadows (the shadows are solid, you can adjust their
+    #  color by ui.colors.*.dialog.shadow). You may also want to eliminate the
+    #  wide borders by adjusting setup.h.
+    set ui.dialogs.shadows = 1
+
+
+
+
+
+
+##############################
+# Automatically saved options
+#
+
+## mime 
+#  MIME-related options (handlers of various MIME types).
+
+  ## mime.extension 
+  #  Extension <-> MIME type association.
+
+    ## mime.extension.txt <str>
+    #  MIME-type matching this file extension ('*' is used here in place of
+    #  '.').
+    set mime.extension.txt = "text/plain"
+
+
+
