--- a/tmux.conf
+++ b/tmux.conf
@@ -106,7 +106,10 @@ set -g status-right ' | \
 #(/usr/bin/env bash $SebCfgDir/temperature.sh)\
 #(/usr/bin/env bash $SebCfgDir/battery.sh)'
 set -g status-left '[#S:#I:#P] #(whoami) #h \
-#{?pane_mode,#{pane_mode} ,}#{?rectangle_toggle,R ,}| '
+#{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
+#{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
+#{copy_cursor_x}x#{copy_cursor_y}:#{scroll_position} ,}\
+#{?rectangle_toggle,R ,}| '
 
 # current window style (on the status line)
 set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,bold
