--- a/tmux.conf
+++ b/tmux.conf
@@ -100,8 +100,7 @@ set -g status-fg $fav_fg
 set -g status-bg $fav_bg
 set -g status-right ' | \
 #(date +%I:%M\ %P) | %D | \
-#(ip -br -4 a | sed "s/ * / /g" | \
-        grep -v "tun[0-9]" | grep -v "br-" | grep -v "docker" | \
+#(ip -br -4 a | sed "s/ * / /g" | grep -vE "(tun[0-9]|br-|docker)" |\
         cut -d " " -f3 | cut -d/ -f1 | tail -n1) | \
 #(/usr/bin/env bash $SebCfgDir/temperature.sh)\
 #(/usr/bin/env bash $SebCfgDir/battery.sh)'
