--- a/tmux.conf
+++ b/tmux.conf
@@ -85,9 +85,20 @@ set -g display-time 1500
 # fg = colour121 (#87ffaf)
 # comp = colour212 (closest to #ff8d86)
 # bg = colour234 (#1c1c1c)
-fav_fg=colour121
-fav_cm=colour212
-fav_bg=colour234
+%if "#{==:#{host},pi4b}"
+# raspberry pi server
+%hidden fav_fg=colour196
+%hidden fav_cm=colour35
+%elif "#{==:#{host},capybara}"
+# server
+%hidden fav_fg=colour105
+%hidden fav_cm=colour209
+%else
+# default
+%hidden fav_fg=colour121
+%hidden fav_cm=colour212
+%endif
+%hidden fav_bg=colour234
 
 # give colors
 set -g default-terminal "$TERM"
@@ -101,9 +112,9 @@ set -g status-bg $fav_bg
 set -g status-right ' | \
 #(date +%I:%M\ %P) | %D | \
 #(ip -br -4 a | sed "s/ * / /g" | grep -vE "(tun[0-9]|br-|docker)" |\
-        cut -d " " -f3 | cut -d/ -f1 | tail -n1) | \
-#(/usr/bin/env bash $SebCfgDir/temperature.sh)\
-#(/usr/bin/env bash $SebCfgDir/battery.sh)'
+        cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
+#{?#{==:#{host},pi4b}, | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
+#{?#(hash upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
 set -g status-left '[#S:#I:#P] #(whoami) #h \
 #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
