Added support for different tmux versions in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,20 +85,41 @@ set -g display-time 1500
 # fg = colour121 (#87ffaf)
 # comp = colour212 (closest to #ff8d86)
 # bg = colour234 (#1c1c1c)
+# since before version 3.2, the %hidden directive didn't exist
+# so we need to accommodate for that
 %if "#{==:#{host},pi4b}"
-# raspberry pi server
-%hidden fav_fg=colour196
-%hidden fav_cm=colour35
+    # raspberry pi server
+    %if "#{&&:#{>=:3,#{=1:version}},#{>=:2,#{=-1:#{s/[a-zA-Z]//:version}}}}"
+        %hidden fav_fg=colour196
+        %hidden fav_cm=colour35
+    %else
+        fav_fg=colour196
+        fav_cm=colour35
+    %endif
 %elif "#{==:#{host},capybara}"
-# server
-%hidden fav_fg=colour105
-%hidden fav_cm=colour209
+    # server
+    %if "#{&&:#{>=:3,#{=1:version}},#{>=:2,#{=-1:#{s/[a-zA-Z]//:version}}}}"
+        %hidden fav_fg=colour105
+        %hidden fav_cm=colour209
+    %else
+        fav_fg=colour105
+        fav_cm=colour209
+    %endif
 %else
-# default
-%hidden fav_fg=colour121
-%hidden fav_cm=colour212
+    # default
+    %if "#{&&:#{>=:3,#{=1:version}},#{>=:2,#{=-1:#{s/[a-zA-Z]//:version}}}}"
+        %hidden fav_fg=colour121
+        %hidden fav_cm=colour212
+    %else
+        fav_fg=colour121
+        fav_cm=colour212
+    %endif
 %endif
-%hidden fav_bg=colour234
+%if "#{&&:#{>=:3,#{=1:version}},#{>=:2,#{=-1:#{s/[a-zA-Z]//:version}}}}"
+    %hidden fav_bg=colour234
+%else
+    fav_bg=colour234
+%endif
 
 # give colors
 set -g default-terminal "$TERM"
@@ -114,7 +135,7 @@ set -g status-right ' | \
 #(ip -br -4 a | sed "s/ * / /g" | grep -vE "(tun[0-9]|br-|docker)" |\
         cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
 #{?#{==:#{host},pi4b}, | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
-#{?#(hash upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
+#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
 set -g status-left '[#S:#I:#P] #(whoami) #h \
 #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
