--- a/tmux.conf
+++ b/tmux.conf
@@ -85,22 +85,20 @@ set -g display-time 1500
 # fg = colour121 (#87ffaf)
 # comp = colour212 (closest to #ff8d86)
 # bg = colour234 (#1c1c1c)
-# since before version 3.2, the %hidden directive didn't exist
-# so we need to accommodate for that
 %if "#{==:#{host},pi4b}"
     # raspberry pi server
-    %hidden fav_fg=colour196
-    %hidden fav_cm=colour35
+    fav_fg=colour196
+    fav_cm=colour35
 %elif "#{==:#{host},capybara}"
     # server
-    %hidden fav_fg=colour105
-    %hidden fav_cm=colour209
+    fav_fg=colour105
+    fav_cm=colour209
 %else
     # default
-    %hidden fav_fg=colour121
-    %hidden fav_cm=colour212
+    fav_fg=colour121
+    fav_cm=colour212
 %endif
-%hidden fav_bg=colour234
+fav_bg=colour234
 
 # give colors
 set -g default-terminal "$TERM"
