Updated IP display in aliases and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -111,7 +111,7 @@ set -g status-fg $fav_fg
 set -g status-bg $fav_bg
 set -g status-right ' | \
 #(date +%I:%M\ %P) | %D | \
-#(ip -br -4 a | sed "s/ * / /g" | grep -vE "(tun[0-9]|br-|docker)" |\
+#(ip -br -4 a | sed "s/ * / /g" | grep -vE "(tun[0-9]|br-|veth-|docker)" |\
         cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
 #{?#{==:#{host},pi4b}, | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
