Added secondary prefix in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,8 @@
 unbind C-b
 set -g prefix C-v
 bind C-v send-prefix
+# Secondary send-prefix for nested tmux sessions/over ssh
+bind a send-prefix
 
 set -g default-shell "$SHELL"
 
