--- a/tmux.conf
+++ b/tmux.conf
@@ -102,7 +102,7 @@ set -g display-time 1500
 %endif
 fav_bg=colour234
 
-# give colors
+# give color
 set -g default-terminal "$TERM"
 set -wa terminal-overrides ",linux:RGB"
 
@@ -117,7 +117,7 @@ set -g status-right ' | \
         cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
 #{?#{==:#{host},pi4b}, | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
-set -g status-left '[#S:#I:#P] #(whoami) #h \
+set -g status-left '[#S:#I:#P] #{?client_prefix,! ,}#(whoami) #h \
 #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
 #{copy_cursor_x}x#{copy_cursor_y}:#{scroll_position} ,}\
