--- a/tmux.conf
+++ b/tmux.conf
@@ -120,7 +120,7 @@ set -g status-right ' | \
 set -g status-left '[#S:#I:#P] #{?client_prefix,! ,}#(whoami) #h \
 #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
-#{copy_cursor_x}x#{copy_cursor_y}:#{scroll_position} ,}\
+#{copy_cursor_x}x#{copy_cursor_y} ,}\
 #{?rectangle_toggle,R ,}| '
 
 # current window style (on the status line)
