Changed default colors in tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,12 +71,9 @@ set -g set-titles on
 
 # set timeout 5 mins
 set -g lock-after-time 300
-# including pkill ueberzug here as even when locked, the image is still shown
-# this means you'd have to scroll back over the image once unlocked but that's
-# not really a biggie
-set -g lock-command "pkill ueberzug; cmatrix -sBu 2 -C green"
+set -g lock-command "cmatrix -sBu 2 -C white"
 # package tty-clock in debian-based distros; tty-clock-git in arch
-#set -g lock-command "pkill ueberzug; tty-clock -ScbtB -C 2 -d 0.5"
+#set -g lock-command "tty-clock -ScbtB -C 2 -d 0.5"
 
 # sets time messages display to 1.5 seconds
 set -g display-time 1500
@@ -97,8 +94,8 @@ set -g display-time 1500
     fav_cm=colour209
 %else
     # default
-    fav_fg=colour121
-    fav_cm=colour212
+    fav_fg=colour212
+    fav_cm=colour121
 %endif
 fav_bg=colour234
 
