Changed default zsh prompt colors, minor updates to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,7 @@ set -g set-titles on
 
 # set timeout 5 mins
 set -g lock-after-time 300
-set -g lock-command "cmatrix -sBu 2 -C white"
+set -g lock-command "cmatrix -su 2 -C white"
 # package tty-clock in debian-based distros; tty-clock-git in arch
 #set -g lock-command "tty-clock -ScbtB -C 2 -d 0.5"
 
