--- a/tmux.conf
+++ b/tmux.conf
@@ -114,8 +114,9 @@ set -g status-right ' | \
         cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
 #{?#{==:#{host},pi4b}, | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
-set -g status-left '[#S:#I:#P] #{?client_prefix,! ,}#(whoami) #h \
-#{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
+
+set -g status-left '#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]#[noreverse] \
+#(whoami) #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
 #{copy_cursor_x}x#{copy_cursor_y} ,}\
 #{?rectangle_toggle,R ,}| '
