--- a/tmux.conf
+++ b/tmux.conf
@@ -118,10 +118,16 @@ set -g status-right ' | \
 set -g status-left '#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]#[noreverse] \
 #(whoami) #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
-#{copy_cursor_x}x#{copy_cursor_y} ,}\
-#{?rectangle_toggle,R ,}| '
+#{?rectangle_toggle,#[reverse],#[noreverse]}\
+#{?selection_active,\
+#(echo $((#{selection_end_x} > #{selection_start_x} ? \
+#{selection_end_x}-#{selection_start_x}+1 : #{selection_start_x}-#{selection_end_x}+1))\
+x\
+$((#{selection_end_y} > #{selection_start_y} ? \
+#{selection_end_y}-#{selection_start_y}+1 : #{selection_start_y}-#{selection_end_y}+1))\
+)#[noreverse] ,}\
+,}#[noreverse]| '
 
-# current window style (on the status line)
 set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,bold
 
 # pane number display
