tmux status bar now has temperature measurement for all raspberry pis and not a specific one.

--- a/tmux.conf
+++ b/tmux.conf
@@ -112,7 +112,7 @@ set -g status-right ' | \
 #(date +%I:%M\ %P) | %D | \
 #(ip -c=never -br -4 a | sed "s/ * / /g" | grep -E "^(wl|ww|sl|ib|en|eth|lo)" |\
         cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
-#{?#{==:#{host},pi4b}, | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
 
 set -g status-left '#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]#[noreverse] \
