tmux terminal variable and colors now work whether we're using 256 colors or not

--- a/tmux.conf
+++ b/tmux.conf
@@ -99,9 +99,12 @@ set -g display-time 1500
 %endif
 fav_bg=colour234
 
-# give color
-set -g default-terminal "$TERM"
-set -wa terminal-overrides ",linux:RGB"
+# give color or don't if not 256 color
+# the color is a little wonky when using an 8bit terminal, but TODO later
+if-shell "echo $TERM|grep -q 256color" \
+        'set -g default-terminal "tmux-256color"' \
+        'set -g default-terminal "tmux"'
+set -wa terminal-overrides ",tmux*:RGB"
 
 # status bar conf
 set -g status-left-length 40
