Removed any bold in tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -109,16 +109,17 @@ set -wa terminal-overrides ",tmux*:RGB"
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 60
-set -g status-fg $fav_fg
-set -g status-bg $fav_bg
-set -g status-right ' | \
+#set -g status-fg $fav_fg
+#set -g status-bg $fav_bg
+set -g status-right '#[nobold] | \
 #(date +%I:%M\ %P) | %D | \
 #(ip -c=never -br -4 a | sed "s/ * / /g" | grep -E "^(wl|ww|sl|ib|en|eth|lo)" |\
         cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
 
-set -g status-left '#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]#[noreverse] \
+set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]\
+#[noreverse] \
 #(whoami) #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
 #{?rectangle_toggle,#[reverse],#[noreverse]}\
@@ -131,7 +132,7 @@ $((#{selection_end_y} > #{selection_start_y} ? \
 )#[noreverse] ,}\
 ,}#[noreverse]| '
 
-set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,bold
+set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,nobold
 
 # pane number display
 set -g display-panes-active-colour $fav_fg
