fix tiny tmux config mistake

--- a/tmux.conf
+++ b/tmux.conf
@@ -109,8 +109,8 @@ set -wa terminal-overrides ",tmux*:RGB"
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 60
-#set -g status-fg $fav_fg
-#set -g status-bg $fav_bg
+set -g status-fg $fav_fg
+set -g status-bg $fav_bg
 set -g status-right '#[nobold] | \
 #(date +%I:%M\ %P) | %D | \
 #(ip -c=never -br -4 a | sed "s/ * / /g" | grep -E "^(wl|ww|sl|ib|en|eth|lo)" |\
