Removed ip display from tmux.conf, replaced with session's cwd; added keybind to change session's cwd

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,6 +64,9 @@ bind -r -T copy-mode-vi C-q send-keys -X rectangle-toggle
 # toggle status bar
 bind ` set-option -g status
 
+# change session cwd to the one in the selected pane
+bind -T prefix A attach-session -c "#{pane_current_path}"
+
 ### appearance ###
 
 # autoname windows
@@ -111,12 +114,10 @@ set -g status-left-length 40
 set -g status-right-length 60
 set -g status-fg $fav_fg
 set -g status-bg $fav_bg
-set -g status-right '#[nobold] | \
-#(date +%I:%M\ %P) | %D | \
-#(ip -c=never -br -4 a | sed "s/ * / /g" | grep -E "^(wl|ww|sl|ib|en|eth|lo)" |\
-        cut -d " " -f3 | cut -d/ -f1 | tail -n1)\
+set -g status-right '#[nobold] | #{b:session_path} | \
+#(date +%a\ %b\ %d\ %I:%M\ %P)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
+#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),} '
 
 set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]\
 #[noreverse] \
