--- a/tmux.conf
+++ b/tmux.conf
@@ -38,11 +38,13 @@ unbind Up       # default: select the pane above
 unbind Down     # default: select the pane below
 unbind Left     # default: select the pane to the left
 unbind Right    # default: select the pane to the right
+unbind C        # default: cutomize-mode -Z
 
 bind -T prefix / splitw -h      # split horizontally (l & r)
 bind -T prefix % selectp -l     # select last window
 bind -T prefix \; command-prompt
-bind -T prefix ? list-keys # the default is list-keys -N which i don't prefer
+bind -T prefix ? list-keys
+bind -T prefix O customize-mode -Z
 
 bind -T prefix C-l lock
 
@@ -57,15 +59,20 @@ bind -r -T prefix l selectp -R
 
 ## copy mode
 
-bind -r -T copy-mode-vi v send-keys -X begin-selection
-bind -r -T copy-mode-vi y send-keys -X copy-selection
-bind -r -T copy-mode-vi C-q send-keys -X rectangle-toggle
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
 
 # toggle status bar
 bind ` set-option -g status
 
 # change session cwd to the one in the selected pane
-bind -T prefix A attach-session -c "#{pane_current_path}"
+bind -T prefix C attach-session -c "#{pane_current_path}"
+
+# list keybinds for each mode
+bind -N "List prefix keybinds" -T prefix I list-keys -aN -T prefix
+bind -N "List copy-mode-vi keybinds" -T copy-mode-vi I list-keys -aN -T copy-mode-vi
+# prefix+? still lists all keybinds in all modes
 
 ### appearance ###
 
@@ -112,8 +119,7 @@ set -wa terminal-overrides ",tmux*:RGB"
 # status bar conf
 set -g status-left-length 40
 set -g status-right-length 60
-set -g status-fg $fav_fg
-set -g status-bg $fav_bg
+set -g status-style bg=$fav_bg,fg=$fav_fg
 set -g status-right '#[nobold] | #{b:session_path} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
