this is absolutely unnecessary but it's cool; update to tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -120,7 +120,8 @@ set -wa terminal-overrides ",tmux*:RGB"
 set -g status-left-length 40
 set -g status-right-length 60
 set -g status-style bg=$fav_bg,fg=$fav_fg
-set -g status-right '#[nobold] | #{b:session_path} | \
+set -g status-right '#[nobold] | \
+#{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
 #(date +%a\ %b\ %d\ %I:%M\ %P)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
