added smaller status bar for smaller screens

--- a/tmux.conf
+++ b/tmux.conf
@@ -120,13 +120,15 @@ set -wa terminal-overrides ",tmux*:RGB"
 set -g status-left-length 40
 set -g status-right-length 60
 set -g status-style bg=$fav_bg,fg=$fav_fg
-set -g status-right '#[nobold] | \
-#{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
-#(date +%a\ %b\ %d\ %I:%M\ %P)\
-#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
-#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
 
-set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]\
+# when the client (terminal window) is resized,
+set-hook -g client-resized {
+    # if the width is greater than 64
+    # (note: this doesn't work with `[' or `[[' for whatever reason; it does
+    # with `test' however)
+    if-shell "test #{window_width} -gt 64" {
+        # we have a lot of space to put the things we want
+        set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}[#S:#I:#P]\
 #[noreverse] \
 #(whoami) #h #{?pane_mode,#{s/-mode//:#{pane_mode}} ,}\
 #{?#{||:#{==:#{pane_mode},view-mode},#{==:#{pane_mode},copy-mode}},\
@@ -139,6 +141,21 @@ $((#{selection_end_y} > #{selection_start_y} ? \
 #{selection_end_y}-#{selection_start_y}+1 : #{selection_start_y}-#{selection_end_y}+1))\
 )#[noreverse] ,}\
 ,}#[noreverse]| '
+        set -g status-right '#[nobold] | \
+#{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}} | \
+#(date +%a\ %b\ %d\ %I:%M\ %P)\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
+#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),}'
+    } {
+        # otherwise, get a smaller set of info (this might be updated in the future)
+        set -g status-left '#[nobold]#{?client_prefix,#[reverse],#[noreverse]}\
+[#S:#I:#P]#[noreverse] | '
+        set -g status-right '#[nobold] | \
+#{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}}\
+#{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
+#{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),} '
+    }
+}
 
 set-window-option -g window-status-current-style fg=$fav_bg,bg=$fav_fg,nobold
 
