Updated tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -152,6 +152,7 @@ $((#{selection_end_y} > #{selection_start_y} ? \
 [#S:#I:#P]#[noreverse] | '
         set -g status-right '#[nobold] | \
 #{?#{==:#{session_path},#(echo $HOME)},~,#{b:session_path}}\
+ | #(date +%R)\
 #{?#(test -f /opt/vc/bin/vcgencmd), | #(/usr/bin/env bash $SebCfgDir/temperature.sh),}\
 #{?#(command -v upower), | #(/usr/bin/env bash $SebCfgDir/battery.sh),} '
     }
